# pico-spec

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build_all.bat  build_all.ps1  build_all.sh  memmap.ld  rp2350-memmap.ld
ROMS_16k/: LostTapesOfAlbion.rom  Xevious.rom  cartucho_kv.rom
debug/: 48.udi  Amaurote.pzx  BorderTr_disasm.txt  ECHOLOG_disasm.txt  FPGA48all_disasm.txt  GALLOWS.FDI  GALLOWS_analysis.txt  GALLOWS_structure.txt  LOCOMOT.FDI  LOCOMOT_structure.txt  MKOMBSVV.fdi  MKOMBSVV_structure.txt  MK_ORIG.FDI  MK_ORIG_structure.txt  NETWALK1.FDI  OpenIt.fdi  OpenIt_structure.txt  ZXF1_O.FDI  ZXF1_O_structure.txt  ZXF45_O.FDI  ZXF45_O_boot_disasm.txt  ZXF45_O_structure.txt  dandare2_structure.txt  gallows_boot_disasm.txt  parse_tzx.py  trdos_disasm.txt  ula128_disasm.txt  ula48_disasm.txt
drivers/audio/: CMakeLists.txt  audio.c  audio.h  pcm5122_init.c  pcm5122_init.h
drivers/fatfs/: ff.c  ff.h  ffconf.h
drivers/graphics/: graphics.c  graphics.h
drivers/hdmi/: hdmi.c  hdmi.h
drivers/libdvi/: CMakeLists.txt  audio_ring.c  audio_ring.h  common_dvi_pin_configs.h  data_packet.c  data_packet.h  dvi.c  dvi.h  dvi_clock.pio  dvi_serialiser.c  dvi_serialiser.h  dvi_serialiser.pio  dvi_timing.c  dvi_timing.h  hdmi.c  hdmi.h  tmds_encode.S  tmds_encode.c
drivers/picomp3lib/: CMakeLists.txt  buffers.c  music_file.c  music_file.h
drivers/ps2/: ps2.c  ps2.h
drivers/ps2kbd/: CMakeLists.txt  ps2kbd_mrmltr.cpp  ps2kbd_mrmltr.h  ps2kbd_mrmltr10.pio  ps2kbd_mrmltr14.pio  ps2kbd_mrmltr16.pio
drivers/psram/: psram_spi.c  psram_spi.h  psram_spi.pio
drivers/sdcard/: pio_spi.c  sdcard.c  sdcard.h  spi.pio
drivers/st7789/: st7789.c  st7789.h
drivers/tv/: tv.c  tv.h
drivers/tv-software/: tv-software.c  tv-software.h
drivers/vga-nextgen/: vga.c  vga.h
src/: AySound.cpp  AySound.h  CPU.cpp  CPU.h  CaptureBMP.cpp  CaptureBMP.h  Config.cpp  Config.h  Debug.cpp  Debug.h  DivMMC.cpp  DivMMC.h  ESPectrum.cpp  ESPectrum.h  FileInfo.cpp  FileInfo.h  FileUtils.cpp  FileUtils.h  Font.cpp  LoadWavStream.h  MB02.cpp  MB02.h  MemESP.cpp  MemESP.h  Midi.cpp  Midi.h  MidiSynth.cpp  MidiSynth.h  OSDFile.cpp  OSDMain.cpp  OSDMain.h  OSDMenu.cpp  PinSerialData_595.c  PinSerialData_595.h  Ports.cpp  Ports.h  SAASound.cpp  SAASound.h  Snapshot.cpp  Snapshot.h  (+41 more)
src/GS/: GS.cpp  GS.h  GS_ROM.c  GS_ROM.h  GS_ROM_v104b.c  Z80_compat.h  Z80_redcode.c
src/Graphics/: Graphics.h  Graphics8BitPalette.h  GraphicsR2G2B2S2Swapped.h
src/I2S/: DMABufferDescriptor.h  I2S.cpp  I2S.h
src/VGA/: VGA.cpp  VGA.h  VGA6Bit.h  VGA8Bit.h
src/Z80_JLS/: z80.h  z80operations.h
src/boards/: waveshare_rp2350_pizero.h
src/miniz/: miniz.c
src/roms/: 128TR93.ROM.h  AluBytesStd.c  AluBytesUlaPlus.c  RomPlus2spanish.h  alf1.c  esxdos.c  esxdos.h  esxide.c  mb02boot.h  rom128Kcustom.c  rom128Kcustom.cpp  rom128Kcustom.h  rom128Kspanish.h  rom48Kcustom.c  rom48Kcustom.cpp  rom48Kcustom.h  rom48Kspanish.cpp  rom48Kspanish.h  romByte48k.h  romGluk.h  romSTS75.h  romSinclair48K_disasm.txt  rompentagon128k.c  scorp295-0C6C1EF7.c  scorp295-0C6C1EF7.h  scorpTest-E0230CA7.c  scorpTest-E0230CA7.h  trdos.c  trdos.h
tools/: compare_pulses.py  create_hdf.py  create_mmc.py  dandare2_compare.py  fb2png.py  memdump.gdb  memdump.py  memdump.sh  screenshot.gdb  screenshot.sh  screenshot_external.sh  tap2tzx.py  tape_parse.py  z80disasm.py
